nullaway_error_366EC141-E03F-4524-B7C3-AAA06CD93CB7.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/context/event/ApplicationListenerMethodAdapter.java:254: error: [NullAway] passing @Nullable parameter 'args' where @NonNull is required
                        Object result = doInvoke(args);
                                                 ^
    (see http://t.uber.com/nullaway )
